// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders one card correctly 1`] = `
<div
  className="sc-bdVaJa hVKLoi"
>
  <div
    className="sc-bwzfXH kcAiZW"
  >
    2
  </div>
  <div
    className="sc-htpNat fvkhKw"
  >
    <div
      className="sc-bxivhb hhpgyT"
      type="Clubs"
    />
  </div>
</div>
`;

exports[`renders the card table correctly with 1 card 1`] = `
<div
  className="sc-ifAKCX eFpWkd"
>
  <h2
    className="sc-bZQynM GbkAN"
  >
    Card Table
  </h2>
  <div
    className="sc-bdVaJa hVKLoi"
  >
    <div
      className="sc-bwzfXH kcAiZW"
    >
      2
    </div>
    <div
      className="sc-htpNat fvkhKw"
    >
      <div
        className="sc-bxivhb hhpgyT"
        type="Clubs"
      />
    </div>
  </div>
</div>
`;
